# computer-graphics-labs

./: README.md
lab1/: main.py
lab2/: CMakeLists.txt  main.cpp
